feat: 도커 빌드 이미지 플랫폼 변경
서버 환경에 맞게 변경
amd64 -> arm64

Related to: #1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_APP_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64
+          platforms: linux/arm64
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
