feat: 도커 파일 수정
빌드 속도 최적화를 위해 패키지 변경 사항 없을시 기존 패키지 재활용

Related to: #1

--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,25 +1,35 @@
-# infra/Dockerfile
-
+# 베이스 이미지
 FROM node:20-alpine AS base
 RUN apk add --no-cache libc6-compat
 
+# 의존성 설치 단계
 FROM base AS deps
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
+# 빌드 단계
 FROM base AS builder
 WORKDIR /app
-COPY . .
+
+# 의존성 먼저 복사
 COPY --from=deps /app/node_modules ./node_modules
+
+# 앱 소스 복사는 나중에
+COPY . .
+
 RUN yarn build
 
+# 실행 단계
 FROM base AS runner
 WORKDIR /app
 RUN addgroup -g 1001 -S nodejs && adduser -u 1001 -S nextjs -G nodejs
+
+# 빌드 산출물 복사
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+
 USER nextjs
 EXPOSE 3000
 CMD ["node", "server.js"]
